Improve fast-run feature to launch programs in debug mode